--- a/src/template/home.html
+++ b/src/template/home.html
@@ -1,5 +1,9 @@
 <div id="main">
-  page home
+  <div class="menu">
+    <h1>Pau'd'cast</h1>
+  </div>
+  <div class="encart-container">
 
+  </div>
   <a href="#emission">les emissions c'est là</a>
 </div>
