petit test sympa

--- a/src/template/home.html
+++ b/src/template/home.html
@@ -2,7 +2,7 @@
   <div class="menu">
     <h1>Pau'd'cast</h1>
   </div>
-  <div class="encart-container">
+  <div id="encart-container">
 
   </div>
   <a href="#emission">les emissions c'est là</a>
