--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,14 +6,15 @@
   text-align: center;
 }
 
-.encart-container{
+#encart-container{
   position: relative;
   width: 100%;
   height: auto;
   overflow: hidden;
+  display: inline-flex;
 }
 
-.encart-radio{
+#encart-radio{
   width: 300px;
   height: 300px;
 
