--- a/src/template/radio.html
+++ b/src/template/radio.html
@@ -5,7 +5,9 @@
       test
     </div>
     <div id="page-content" class="col-md-6">
-      coucou
+      <div id="encart-container" class="row">
+
+      </div>
     </div>
   </div>
 
