--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,21 +1,37 @@
 .menu{
   width: 100%;
-  height: 100%;
+  height: 150px;
   overflow: hidden;
   position: relative;
   text-align: center;
+  background-color: #29b6f6;
+background-image: linear-gradient(to bottom right, #E1F5FE 0%, #3498db 100%);
 }
 
 #encart-container{
+  padding-top: 50px;
+  text-align: center;
+  margin: 0;
   position: relative;
   width: 100%;
   height: auto;
   overflow: hidden;
-  display: inline-flex;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #encart-radio{
-  width: 300px;
-  height: 300px;
 
+  display: block;
+
+}
+
+footer{
+  background-color: #29b6f6;
+  background-image: linear-gradient(to top left, #E1F5FE 0%, #3498db 100%);
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 80px;
 }
