--- a/src/template/home.html
+++ b/src/template/home.html
@@ -2,8 +2,7 @@
   <div class="menu">
     <h1>Pau'd'cast</h1>
   </div>
-  <div id="encart-container">
-  
+  <div id="encart-container" class="row">
+
   </div>
-  <a href="#emission">les emissions c'est là</a>
 </div>
