--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,6 +18,7 @@ background-image: linear-gradient(to bottom right, #E1F5FE 0%, #3498db 100%);
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
+  height: 100%;
 }
 
 #encart-radio{
@@ -30,7 +31,7 @@ footer{
   background-color: #29b6f6;
   background-image: linear-gradient(to top left, #E1F5FE 0%, #3498db 100%);
   display: block;
-  position: absolute;
+  position: relative;
   bottom: 0px;
   width: 100%;
   height: 80px;
