commit des familles

--- a/src/template/home.html
+++ b/src/template/home.html
@@ -2,6 +2,10 @@
   <div class="menu">
     <h1>Pau'd'cast</h1>
   </div>
+  <div class="container">
+    <h3>Notre Selection !</h3>
+  </div>
+
   <div id="encart-container" class="row">
 
   </div>
