--- a/src/template/home.html
+++ b/src/template/home.html
@@ -3,10 +3,26 @@
     <h1>Pau'd'cast</h1>
   </div>
   <div class="container">
+    <h3>Votre recherche !</h3>
+    <div id="rss_feed">
+      <div id="recherche">
+        <form class="col-md-6">
+          <div class="form-groupe">
+            <label for="rssInput">Votre lien rss:</label>
+            <input type="text" class="form-control" name="rssResearch" id="rss_link" value="">
+          </div>
+          <br>
+          <button type="submit" class="btn btn-default">Podcaster</button>
+        </form>
+
+
+      </div>
+    </div>
+
     <h3>Notre Selection !</h3>
-  </div>
+    </div>
 
-  <div id="encart-container" class="row">
+    <div id="encart-container" class="row">
 
-  </div>
+    </div>
 </div>
