--- a/src/template/home.html
+++ b/src/template/home.html
@@ -20,7 +20,7 @@
         </div>
         </div>
         <div class="col-md-6">
-          <table class="table table-striped table-hover" id="tableau">
+          <table class="table table-striped table-hover table_feed" id="tableau">
             <tr>
               <td>
                 date
