documentation oune po plous complete

--- a/src/template/documentation.html
+++ b/src/template/documentation.html
@@ -1,7 +1,7 @@
 <div id="main">
   <h2>DOCUMENTATION</h2>
   <p>Bonjour, merci d'utiliser notre application !</p>
-  <p>Voici un petit guide pour vous aider à utiliser au mieux notre application facilement</p>
+  <p>Voici un petit guide pour vous aider à utiliser au mieux notre application facilement.</p>
   <h3>Comment utiliser l'application:</h3>
   <ul>
     <li><b>Votre recherche</b></li>
@@ -9,6 +9,8 @@
     <p>Maintenant cliquez sur Pau'd'caster, si tout se passe bien vous devriez voir apparaitre les actualités sur la droite de la page !</p>
     <li><b>Notre Selection !</b></li>
     <p>Vous trouverez une selection de fluxs rss déjà présents dans notre application.</p>
-    <p>Il vous suffit de cliquer sur une des images pour acceder à une page contenant toutes emissions du flux choisi</p>
+    <p>Il vous suffit de cliquer sur une des images pour acceder à une page contenant toutes les emissions du flux choisi</p>
+    <li><b>Player, à droite de la page</b></li>
+    <p>C'est ici que vous retrouverez les actualités liées au flux que vous avez entré dans la barre de recherche !</p>
   </ul>
 </div>
