--- a/src/template/home.html
+++ b/src/template/home.html
@@ -1,7 +1,4 @@
 <div id="main">
-  <div class="menu">
-    <h1>Pau'd'cast</h1>
-  </div>
   <div class="container">
     <h3>Votre recherche !</h3>
     <div id="rss_feed" class="row">
@@ -12,14 +9,14 @@
             <input type="text" class="form-control" name="rssResearch" id="rss_link" value="">
           </div>
           <br>
-          <input type="button" class="btn btn-default" id="sendRssLink" value="podcaster"></input>
+          <input type="button" class="btn btn-default" id="sendRssLink" value="pau'd'caster"></input>
         </form>
         <h3>Notre Selection !</h3>
         <div id="encart-container" class="row">
 
         </div>
         </div>
-        <div class="col-md-6">
+        <div id="partGauche" class="col-md-6">
           <table class="table table-striped table-hover table_feed" id="tableau">
             <tr>
               <td>
