--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,8 +34,8 @@ background-image: linear-gradient(to bottom right, #E1F5FE 0%, #3498db 100%);
   display: block;
 }
 
-.table_feed{
-  height: 400px;
+#rssFeed{
+  height: 420px;
   overflow: scroll;
   display: block;
 }
