--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-body{
+html,body{
   height: 100%;
   margin: 0px;
   width: 100%;
@@ -60,7 +60,7 @@ footer{
   background-color: #29b6f6;
   background-image: linear-gradient(to top left, #E1F5FE 0%, #3498db 100%);
   display: block;
-  position: relative;
+  position: fixed;
   bottom: 0px;
   width: 100%;
   height: 80px;
