--- a/src/template/documentation.html
+++ b/src/template/documentation.html
@@ -16,6 +16,6 @@
     </ul>
   </div>
   <div id="Retour">
-    <button type="button" name="homeSweetHome">Retour à l'application</button>
+    <center><a class="btn btn-default" name="homeSweetHome" href="#home">Retour à l'application</a></center>
   </div>
 </div>
