--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,13 +9,15 @@ html,body{
   width: 100%;
   height: 10%;
   overflow: hidden;
-  position: relative;
+  position: fixed;
   text-align: center;
   background-color: #29b6f6;
 background-image: linear-gradient(to bottom right, #E1F5FE 0%, #3498db 100%);
 }
 
 #container{
+  top: 10%;
+  position: relative;
   height: 80%;
   overflow: scroll;
 }
