--- a/src/template/home.html
+++ b/src/template/home.html
@@ -1,4 +1,23 @@
 <div id="main">
+  <div class="modal fade" tabindex="-1" role="dialog" id="AlertBox">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">Player</h4>
+        </div>
+        <div class="modal-body" id="modalBody">
+        </div>
+        <div class="modal-footer">
+          <button type="button" id="stopButton" class="btn btn-primary" data-dismiss="modal">Stop</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+
   <div class="container">
     <h3>Votre recherche !</h3>
     <div id="rss_feed" class="row">
