--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,25 +1,25 @@
 html,body{
-  height: 100%;
+  height: auto;
   margin: 0px;
   width: 100%;
   overflow: hidden;
+  display: block;
+  position: absolute;
 }
 
 .menu{
   width: 100%;
-  height: 10%;
+  height: 150px;
   overflow: hidden;
-  position: fixed;
+  position: relative;
   text-align: center;
   background-color: #29b6f6;
 background-image: linear-gradient(to bottom right, #E1F5FE 0%, #3498db 100%);
 }
 
 #container{
-  top: 10%;
   position: relative;
-  height: 80%;
-  overflow: scroll;
+  display: block;
 }
 
 #rss_feed{
@@ -67,8 +67,7 @@ footer{
   background-color: #29b6f6;
   background-image: linear-gradient(to top left, #E1F5FE 0%, #3498db 100%);
   display: block;
-  position: absolute;
-  bottom: 0px;
+  position: relative;
   width: 100%;
-  height: 10%;
+  height: 100px;
 }
