--- a/src/template/home.html
+++ b/src/template/home.html
@@ -9,6 +9,7 @@
           <h4 class="modal-title">Player</h4>
         </div>
         <div class="modal-body" id="modalBody">
+
         </div>
         <div class="modal-footer">
           <button type="button" id="stopButton" class="btn btn-primary" data-dismiss="modal">Stop</button>
@@ -17,8 +18,12 @@
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
-
+  <br>
   <div class="container">
+    <div class="alert alert-warning alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Warning!</strong> Application en cours de construction !
+</div>
     <h3>Votre recherche !</h3>
     <div id="rss_feed" class="row">
       <div id="recherche" class="col-md-6">
