ca sauvegarde mon gars

--- a/src/template/home.html
+++ b/src/template/home.html
@@ -33,7 +33,8 @@
             <input type="text" class="form-control" name="rssResearch" id="rss_link" placeholder="ex : http://radiofrance-podcast.net/podcast09/rss_11171.xml" value="">
           </div>
           <br>
-          <button type="button" class="btn btn-default" id="sendRssLink">pau'd'caster</button>
+          <button type="button" class="btn btn-primary" id="sendRssLink">Pau'd'caster</button>
+          <button type="button" class="btn btn-info" id="saveRssLink">Sauvegarder</button>
         </form>
         <h3>Notre Selection !</h3>
         <div id="encart-container" class="row">
