--- a/src/template/home.html
+++ b/src/template/home.html
@@ -36,6 +36,12 @@
           <button type="button" class="btn btn-primary" id="sendRssLink">Pau'd'caster</button>
           <button type="button" class="btn btn-info" id="saveRssLink">Sauvegarder</button>
         </form>
+        <h3>Vos Favoris</h3>
+        <button type="button" class="btn btn-danger" id="saveRssLink">Supprimer</button>
+        <button type="button" class="btn btn-info" id="saveRssLink">Recharger</button>
+        <div class="row" id="fav">
+
+        </div>
         <h3>Notre Selection !</h3>
         <div id="encart-container" class="row">
 
