--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,7 +13,24 @@ html,body{
   position: relative;
   text-align: center;
   background-color: #29b6f6;
-background-image: linear-gradient(to bottom right, #E1F5FE 0%, #3498db 100%);
+  background-image: linear-gradient(to bottom right, #E1F5FE 0%, #3498db 100%);
+}
+
+.menu a{
+  color: inherit;
+}
+
+.menu a:hover{
+  text-decoration: none;
+}
+
+.menu a:not(:hover){
+  text-decoration: none;
+}
+
+.menu a:visited{
+  text-decoration: none;
+  decoration: none;
 }
 
 #container{
@@ -54,6 +71,10 @@ background-image: linear-gradient(to bottom right, #E1F5FE 0%, #3498db 100%);
 #Retour{
   position: relative;
   right: 100px;
+}
+
+#canvas{
+  display: none
 }
 
 #rssFeed{
