--- a/src/template/documentation.html
+++ b/src/template/documentation.html
@@ -1,5 +1,5 @@
 <div id="main">
-  <div id="documentation">
+  <div id="documentation" class="container">
     <h2>DOCUMENTATION</h2>
     <p>Bonjour, merci d'utiliser notre application !</p>
     <p>Voici un petit guide pour vous aider à utiliser au mieux notre application facilement.</p>
@@ -13,9 +13,12 @@
       <p>Il vous suffit de cliquer sur une des images pour acceder à une page contenant toutes les emissions du flux choisi</p>
       <li><b>Player, à droite de la page</b></li>
       <p>C'est ici que vous retrouverez les actualités liées au flux que vous avez entré dans la barre de recherche !</p>
+      <li><b>Vos Favoris</b></li>
+      <p>Vous pouvez facilement garder vos émissions préférées à portée de main, pour cela rien de plus simple ! Vous entrez un lien et vous cliquez sur sauvegarder ! Une liste de vos favoris s'affichera, si vous cliquez sur un titre il se chargera dans le flux, si vous cliquez sur del il se retirera de vos favoris</p>
     </ul>
+
+    <h2>Auteurs : </h2>
+    <p>Thoraval Francois et Fontaine Pierre, 2016</p>
   </div>
-  <div id="Retour">
-    <center><a class="btn btn-default" name="homeSweetHome" href="#home">Retour à l'application</a></center>
-  </div>
+
 </div>
