--- a/src/template/home.html
+++ b/src/template/home.html
@@ -35,6 +35,7 @@
           <br>
           <button type="button" class="btn btn-primary" id="sendRssLink">Pau'd'caster</button>
           <button type="button" class="btn btn-info" id="saveRssLink">Sauvegarder</button>
+          <button type="button" class="btn btn-warning" id="viderFlux">Vider le flux</button>
         </form>
         <div id="fav">
           <h3>Vos Favoris</h3>
