doc + soulignage elem

--- a/src/template/documentation.html
+++ b/src/template/documentation.html
@@ -7,15 +7,20 @@
     <ul>
       <li><b>Votre recherche</b></li>
       <p>Naviguez sur le web et copiez l'url du flux rss, puis collez cette url dans le champs "votre lien rss:".</p>
-      <p>Maintenant cliquez sur Pau'd'caster, si tout se passe bien vous devriez voir apparaitre les actualités sur la droite de la page !</p>
+      <p>Maintenant cliquez sur <b>Pau'd'caster</b>, si tout se passe bien vous devriez voir apparaitre les actualités sur la droite de la page !</p>
+      <p>Si vous êtes perdus dans vos flux et vous souhaitez remettre à zéro la partie droite, cliquez sur <b>Vider le flux</b>.</p>
       <li><b>Notre Selection !</b></li>
       <p>Vous trouverez une selection de fluxs rss déjà présents dans notre application.</p>
       <p>Il vous suffit de cliquer sur une des images pour acceder à une page contenant toutes les emissions du flux choisi</p>
-      <li><b>Player, à droite de la page</b></li>
-      <p>C'est ici que vous retrouverez les actualités liées au flux que vous avez entré dans la barre de recherche !</p>
+      <li><b>Liste des flux, à droite de la page</b></li>
+      <p>C'est ici que vous retrouverez les actualités liées au flux que vous avez entrés dans la barre de recherche ou sauvegardés !</p>
+      <p>
       <li><b>Vos Favoris</b></li>
-      <p>Vous pouvez facilement garder vos émissions préférées à portée de main, pour cela rien de plus simple ! Vous entrez un lien et vous cliquez sur sauvegarder ! Une liste de vos favoris s'affichera, si vous cliquez sur un titre il se chargera dans le flux, si vous cliquez sur del il se retirera de vos favoris</p>
+      <p>Vous pouvez facilement garder vos émissions préférées à portée de main, pour cela rien de plus simple ! Vous entrez un lien et vous cliquez sur <b>sauvegarder</b> ! Une liste de vos favoris s'affichera, si vous cliquez sur un titre il se chargera dans le flux, si vous cliquez sur <b>del</b> il sera supprimé</p>
     </ul>
+    <p>
+      Pour revenir à l'application, cliquez sur le titre du site "Pau'd'cast"
+    </p>
 
     <h2>Auteurs : </h2>
     <p>Thoraval Francois et Fontaine Pierre, 2016</p>
