--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,11 @@ html,body{
   background-image: linear-gradient(to bottom right, #E1F5FE 0%, #3498db 100%);
 }
 
+span:hover {
+  cursor: default;
+  border-bottom: 1px solid;
+}
+
 .menu a{
   color: inherit;
 }
