--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,9 +16,8 @@ html,body{
   background-image: linear-gradient(to bottom right, #E1F5FE 0%, #3498db 100%);
 }
 
-.btn-default:hover {
+.btn-default, .btn-outline-secondary:hover {
    cursor: alias;
-   /*C'est juste un test tkt*/
 }
 
 span:hover {
