--- a/src/template/home.html
+++ b/src/template/home.html
@@ -6,10 +6,16 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-          <h4 class="modal-title">Player</h4>
+          <h4 class="modal-title" id="modalTitle">Player</h4>
         </div>
+        <h4>description</h4>
+        <div id="modalDesc"></div>
+        <br>
+        <h4>Lien</h4>
+        <a id="modalLink" target="_blank">Aller vers le site</a>
+        <br>
+        <h4>Lecteur</h4>
         <div class="modal-body" id="modalBody">
-
         </div>
         <div class="modal-footer">
           <button type="button" id="stopButton" class="btn btn-primary" data-dismiss="modal">Stop</button>
